[tool.poetry]
name = "jsh-gitpodtest2"
version = "0.1.0"
description = ""
authors = ["Jeffrey S. Haemer <jeffrey.haemer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
